22일치 까지 해서 소개 페이지 완성 모바일버전 작업해야함

--- a/bootstrap/bootstrap.css
+++ b/bootstrap/bootstrap.css
@@ -3401,7 +3401,7 @@ tbody.collapse.in {
   font-size: 14px;
   text-align: left;
   list-style: none;
-  background-color: #aa1238;
+  background-color: rgba(255, 255, 255, .5);
   -webkit-background-clip: padding-box;
           background-clip: padding-box;
   border: 1px solid #ccc;
