--- a/css/business_mainpage.css
+++ b/css/business_mainpage.css
@@ -375,11 +375,13 @@ footer{
 }
 .footer_bgcolor{
     position: absolute;
-    top: 38px;
+    top: 50%;
     left: 20px;
+    margin-top: -7px;
 }
 [class*="footer_part_"]{
-    float: left;
+    display: inline-block;
+    vertical-align: middle;
     padding: 0 10px;;
     border-right: 1px solid #696969;
 }
@@ -398,6 +400,14 @@ footer{
 }
 .sub_company{
     position: absolute;
-    top: 28px;
+    top: 50%;
     right: 20px;
+    margin-top: -10px;
+}
+.footer_text{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -5px;
+    margin-left: -88px;
 }
