--- a/css/press_release.css
+++ b/css/press_release.css
@@ -154,6 +154,9 @@ a {text-decoration: none; color:inherit; margin: 0; padding: 0; bottom: 0; verti
     margin: 5px 20px;
 
 }
+.dropdown-menu{
+    background-color: #ffffff;
+}
 /* 헤더 */
 
 /* 헤더 텍스트 + 서치*/
@@ -307,7 +310,6 @@ a {text-decoration: none; color:inherit; margin: 0; padding: 0; bottom: 0; verti
 
 /*푸터*/
 footer{
-    width: 100%;
     position: relative;
     background-color: #cccccc;
     height: 90px;
@@ -316,11 +318,13 @@ footer{
 }
 .footer_bgcolor{
     position: absolute;
-    top: 38px;
+    top: 50%;
     left: 20px;
+    margin-top: -7px;
 }
 [class*="footer_part_"]{
-    float: left;
+    display: inline-block;
+    vertical-align: middle;
     padding: 0 10px;;
     border-right: 1px solid #696969;
 }
@@ -339,6 +343,14 @@ footer{
 }
 .sub_company{
     position: absolute;
-    top: 28px;
+    top: 50%;
     right: 20px;
+    margin-top: -10px;
+}
+.footer_text{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -5px;
+    margin-left: -88px;
 }
